IE11 - fix photocredit alignment
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -383,7 +383,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -415,7 +415,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -498,7 +498,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -619,7 +619,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -652,7 +652,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -741,7 +741,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -870,7 +870,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -902,7 +902,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1003,7 +1003,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1129,7 +1129,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1235,7 +1235,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1365,7 +1365,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1398,7 +1398,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
@@ -1490,7 +1490,7 @@
                 </div>
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
+                        <span class="cell shrink">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
