IE11 - Fix object-fit fallback
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -10,10 +10,20 @@
 }
 .compat-object-fit {
 	background-size: cover;
+	background-position: center center;
+
+	&.top {
+		background-position: top center;
+	}
 
 	img {
 		opacity: 0;
 		pointer-events: none;
+	}
+}
+.object-fit.remove-object-fit {
+	img {
+		height: auto;
 	}
 }
 
