mobile text only version
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -77,6 +77,9 @@
             <div class="cell auto grid-y align-center nav-container">
                 <div class="grid-x grid-padding-x align-middle">
                     <ul class="cell auto menu simple main">
+                        <li class="hide-for-medium">
+                            <a href="http://www.google.com/search?strip=1&q=cache:www.sean-harrington.com/ar2018">Text-only version</a>
+                        </li>
                         <li>
                             <a href="#">At a glance</a>
                         </li>
@@ -1509,25 +1512,25 @@
                         <div class="small-12 large-6 cell grid-y align-center align-middle">
                             <h2 class="uppercase">Share</h2>
                             <div class="grid-x grid-padding-x align-middle">
-                                <a href="#" class="cell auto" data-fb-share>
-                                    <img width="30" src="./img/icons/fb-icon.svg" alt="share on facebook">
+                                <a href="#" class="cell shrink" data-fb-share>
+                                    <img width="30" height="30" src="./img/icons/fb-icon.svg" alt="share on facebook">
                                 </a>
-                                <a class="cell auto" href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
-                                    <img width="30" src="./img/icons/twitter-icon.svg" alt="retweet">
+                                <a class="cell shrink" href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
+                                    <img width="30" height="30" src="./img/icons/twitter-icon.svg" alt="retweet">
                                 </a>
                                 <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http://developer.linkedin.com&title=LinkedIn%20Developer%20Network
-                                &summary=My%20favorite%20developer%20program&source=LinkedIn" class="cell auto">
-                                    <img width="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
+                                &summary=My%20favorite%20developer%20program&source=LinkedIn" class="cell shrink">
+                                    <img width="30" height="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
                                 </a>
-                                <a href="#" class="cell auto">
-                                    <img width="30" src="./img/icons/link-icon.svg" data-copyurl alt="copy this link" data-clipboard-text="">
+                                <a href="#" class="cell shrink">
+                                    <img width="30" height="30" src="./img/icons/link-icon.svg" data-copyurl alt="copy this link" data-clipboard-text="">
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="cell small-auto medium-3 text-center footer grid-y align-center">
                         <p>
-                            <a href="#">View low-bandwidth text version.</a>
+                            <a href="http://www.google.com/search?strip=1&q=cache:www.sean-harrington.com/ar2018">View low-bandwidth text version.</a>
                         </p>
                         <p>Copyright 2018 FHI 360. All rights reserved. </p>
                         <p>FHI 360 is the registered trade name of Family Health International.</p>
