IE11 - fix share icons
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -293,6 +293,14 @@
 	}
 }
 
+// learnmore
+[data-section='15'] {
+	a > img {
+		width: 30px;
+		height: 30px;
+	}
+}
+
 .photo-credit {
 	&-container {
 		position: absolute;
