update object fit modernizr
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -10,13 +10,13 @@
 
     <meta property="og:url" content="REPLACE ME WITH PRODUCTION URL" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Catalyze: FHI360.org Annual Report 2018" />
-    <meta property="og:description" content="In this year’s annual report, we share how we are working with our partners to unleash new ideas and opportunities and strengthen
-    our collective capacity to affect change." />
+    <meta property="og:title" content="CATALYZE: FHI 360's 2017 Annual Report" />
+    <meta property="og:description" content="In science, a catalyst ignites a chemical reaction. When applied to human development, a catalyst is the spark that transforms an idea into a solution. In this year's annual report, we share some of the many ways FHI 360 is working with partners to catalyze positive change in the United States and around the world."
+    />
     <meta property="og:image" content="./img/FHI360_2017AR_thumbnail.jpg" />
 
     <!-- Place favicon.ico in the root directory -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
@@ -157,26 +157,46 @@
                             <div class="catalyst-ants">
                                 <svg width="1280" height="800" viewBox="0 0 1280 800">
                                     <symbol id="s-text">
-                                        <text text-anchor="middle" x="50%" y="55%" class="text--line">
+                                        <text text-anchor="middle" x="50%" y="50%" class="text--line">
                                             CATALYZE
                                         </text>
                                     </symbol>
                                     <g class="g-ants">
                                         <use xlink:href="#s-text" class="text-copy"></use>
+                                        {{!--
                                         <use xlink:href="#s-text" class="text-copy"></use>
                                         <use xlink:href="#s-text" class="text-copy"></use>
                                         <use xlink:href="#s-text" class="text-copy"></use>
-                                        <use xlink:href="#s-text" class="text-copy"></use>
+                                        <use xlink:href="#s-text" class="text-copy"></use> --}}
                                     </g>
-                                    <g id="cat_title" style="opacity: 0;">
-                                        <text text-anchor="middle" x="50%" y="55%" class="text--line" style="fill: #fff;">
-                                            CATALYZE
-                                        </text>
-                                    </g>
-                                    <g id="cat_subtitle" style="opacity: 0;">
-                                        <text text-anchor="middle" x="50%" y="65%" class="text--subline" style="fill: #fff;">
-                                            2017 ANNUAL REPORT
-                                        </text>
+                                    <circle id="orange_dot" data-name="orange dot" cx="640" cy="400" r="10" style="fill: #f27321" />
+                                    <g id="cat_subtitle" data-name="cat subtitle">
+                                        <g>
+                                            <path d="M518.22,464.48c1.36-1.44,2.88-3.07,2.88-5.16a2.75,2.75,0,0,0-2.41-3.05,3.42,3.42,0,0,0-.64,0,6,6,0,0,0-3.53,1.4v-1.25a6.31,6.31,0,0,1,3.58-1.32c2.47,0,4.34,1.46,4.34,4.08s-1.78,4.37-2.81,5.45l-3.91,4.05h7v1.18h-8.59V468.8Z"
+                                                style="fill: #fff" />
+                                            <path d="M533.31,455.1c3,0,5.28,2.83,5.28,7.56s-2.3,7.56-5.28,7.56-5.28-2.81-5.28-7.56S530.36,455.1,533.31,455.1Zm0,1.15c-2.28,0-4,2.33-4,6.41s1.68,6.41,4,6.41,4-2.31,4-6.41S535.59,456.25,533.31,456.25Z"
+                                                style="fill: #fff" />
+                                            <path d="M543.65,456.9v-1l2.81-.7v14.62h-1.27v-13Z" style="fill: #fff" />
+                                            <path d="M552.13,456.63v-1.17h9.07v.74c-1.22,1.85-4.9,9-5.71,13.66H554a57.36,57.36,0,0,1,5.62-13.23Z" style="fill: #fff"
+                                            />
+                                            <path d="M573.7,469.86h-1.37l6-14.4h1.08l6,14.4H584l-1.73-4.18H575.5Zm5.07-12.43-2.88,7.08h5.78Z" style="fill: #fff" />
+                                            <path d="M591.22,455.46l8.71,11.74V455.46h1.25v14.4h-.91l-8.71-11.74v11.74h-1.25v-14.4Z" style="fill: #fff" />
+                                            <path d="M608.33,455.46l8.72,11.74V455.46h1.24v14.4h-.91l-8.71-11.74v11.74h-1.25v-14.4Z" style="fill: #fff" />
+                                            <path d="M624.53,455.46h1.32v7.75c0,4,1.85,5.79,4.64,5.79s4.65-1.8,4.65-5.79v-7.75h1.32v7.73c0,4.85-2.4,7-6,7s-6-2.18-6-7Z"
+                                                style="fill: #fff" />
+                                            <path d="M641.86,469.86h-1.37l6-14.4h1.08l6,14.4H652l-1.73-4.18h-6.75Zm5.07-12.43-2.88,7.08h5.78Z" style="fill: #fff" />
+                                            <path d="M659.79,455.46v13.22h6.84v1.18h-8.16v-14.4Z" style="fill: #fff" />
+                                            <path d="M688.59,469.86H687l-4.13-5.95h-3v5.95h-1.32v-14.4H683c3.1,0,4.44,2,4.44,4.22a3.85,3.85,0,0,1-3.17,4.08Zm-2.45-10.18a2.82,2.82,0,0,0-2.56-3.06,3.49,3.49,0,0,0-.56,0h-3.14v6.1H683a2.81,2.81,0,0,0,3.13-2.45A2.41,2.41,0,0,0,686.14,459.68Z"
+                                                style="fill: #fff" />
+                                            <path d="M701.84,455.46v1.17H695v5.07h5.64v1.18H695v5.8h6.84v1.18h-8.16v-14.4Z" style="fill: #fff" />
+                                            <path d="M712.06,455.46a4.35,4.35,0,0,1,.42,8.69,2.94,2.94,0,0,1-.42,0h-3.14v5.71H707.6v-14.4Zm3.12,4.34a2.91,2.91,0,0,0-2.61-3.17h-3.65V463h3.14a2.89,2.89,0,0,0,3.13-2.63A3.62,3.62,0,0,0,715.18,459.8Z"
+                                                style="fill: #fff" />
+                                            <path d="M728.5,455.1a7.56,7.56,0,1,1-7.37,7.75v-.19a7.23,7.23,0,0,1,6.91-7.55Zm0,1.22c-3.48,0-6,2.55-6,6.34s2.52,6.34,6,6.34,6-2.55,6-6.34S731.93,456.32,728.5,456.32Z"
+                                                style="fill: #fff" />
+                                            <path d="M751.44,469.86h-1.55l-4.13-5.95h-3v5.95h-1.32v-14.4h4.47c3.09,0,4.44,2,4.44,4.22a3.86,3.86,0,0,1-3.17,4.08ZM749,459.68a2.82,2.82,0,0,0-2.56-3.06,3.49,3.49,0,0,0-.56,0h-3.15v6.1h3.15a2.8,2.8,0,0,0,3.11-2.47A2.25,2.25,0,0,0,749,459.68Z"
+                                                style="fill: #fff" />
+                                            <path d="M754.56,456.63v-1.17h11.6v1.17H761v13.23h-1.3V456.63Z" style="fill: #fff" />
+                                        </g>
                                     </g>
                                 </svg>
                             </div>
@@ -272,7 +292,7 @@
                     <h6>
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-bg.jpg" alt="Samira Saeed Mouawwad in a beekeeper suit working with a beehive">
                     <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-fg.png" alt="Samira Saeed Mouawwad in a beekeeper suit working with a beehive">
                 </div>
@@ -396,7 +416,7 @@
                     <h6>
                         <span>Photo:</span>As Hardworking as a Bee, Dirar Shawagfeh/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="Close-up of a beehive ">
                 </div>
                 <div class="bg-screen"></div>
@@ -428,7 +448,7 @@
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img src="./img/slides/example-hptn-slide-original.jpg" alt="Close-up of a medical worker doing an HIV finger prick test">
                 </div>
                 <div class="bg-screen purple"></div>
@@ -511,7 +531,7 @@
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
                 </div>
-                <div class="bg object-fit top">
+                <div class="bg objectfit-img top">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-bg.jpg" alt="Yatin Thakur talking with colleagues inside the CoWorkin office ">
                     <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-fg.png" alt="Yatin Thakur talking with colleagues inside the CoWorkin office ">
                 </div>
@@ -632,7 +652,7 @@
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img src="./img/slides/profile-india-slide2-original.jpg" alt="A busy public square in New Delhi, India">
                 </div>
                 <div class="bg-screen"></div>
@@ -665,7 +685,7 @@
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="A woman smiling and holding her sleeping infant">
                 </div>
                 <div class="bg-screen purple"></div>
@@ -754,7 +774,7 @@
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-succeed2020-slide1-original.jpg" alt="Jennifer Carlson standing in a school hallway">
                 </div>
                 <div class="bg-screen black"></div>
@@ -883,7 +903,7 @@
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img src="./img/slides/profile-succeed2020-slide2-original.jpg" alt="Grain silos during a winter sunset in Devil’s Lake, North Dakota">
                 </div>
                 <div class="bg-screen"></div>
@@ -915,7 +935,7 @@
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img data-src="http://sean-harrington.com/ar2018/img/slides/example-tb-slide-original.jpg" alt="An older couple in Mozambique smiling with their arms around each other">
                 </div>
                 <div class="bg-screen purple"></div>
@@ -1016,7 +1036,7 @@
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
-                <div class="bg object-fit top">
+                <div class="bg objectfit-img top">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-bg.jpg" alt="Obey Assery standing in front of the Tanzanian flag">
                     <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-fg.png" alt="Obey Assery standing in front of the Tanzanian flag">
                 </div>
@@ -1142,7 +1162,7 @@
                     <h6>
                         <span>Photo:</span>Maxiphoto/iStockPhoto</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img data-src="http://sean-harrington.com/ar2018/img/slides/example-myanmar-slide-original.jpg" alt="Crowd of people walking in a street market of Yangon, Myanmar">
                 </div>
                 <div class="bg-screen purple"></div>
@@ -1248,10 +1268,10 @@
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide1-original.jpg" alt="A group of students and Dean Yosouf Jami inside the food technology lab at Herat University">
                 </div>
-                <div class="bg-screen"></div>
+                <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 medium-6 large-5 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
@@ -1378,7 +1398,7 @@
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide2-original.jpg" alt="The exterior of Herat University in Afghanistan, with female students walking towards the building">
                 </div>
                 <div class="bg-screen dark"></div>
@@ -1411,7 +1431,7 @@
                     <h6>
                         <span>Photo:</span>John O'Bryan/USAID (CC BY-ND 2.0)</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg objectfit-img">
                     <img data-src="http://sean-harrington.com/ar2018/img/slides/example-mstar-slide-original.jpg" alt="A woman making mobile money transactions">
                 </div>
                 <div class="bg-screen purple"></div>
@@ -1602,7 +1622,7 @@
                         <span class="mobile">University degree program for Afghans</span>
                     </div>
                 </div>
-                <div data-moveto="15" class="cell auto toc-item grid-x grid-padding-x">
+                <div data-moveto="16" class="cell auto toc-item grid-x grid-padding-x">
                     <div class="cell shrink toc-number">10</div>
                     <div class="cell auto toc-title">
                         <span>Technology to drive better outcomes</span>
@@ -1613,7 +1633,7 @@
         </div>
         <div class="close-rightbar bg"></div>
     </div>
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
