--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -140,7 +140,7 @@
 	overflow-y: scroll;
 
 	.drawer-open & {
-		box-shadow: rgb(0, 0, 0) 0px 0px 156px 0px;
+		box-shadow: black 0px 0px 50px 0px;
 	}
 
 	.drawer-title {
