--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -123,8 +123,9 @@ a {
 	font-weight: 200;
 	line-height: 1;
 
-	strong {
-		font-weight: 400;
+	strong,
+	b {
+		font-weight: bold;
 	}
 }
 
@@ -194,6 +195,7 @@ a {
 		border-bottom: 1px solid #ddd;
 	}
 	.toc-number {
+		color: #000;
 		padding: 10px;
 		border: 5px solid black;
 		border-radius: 100%;
@@ -204,6 +206,7 @@ a {
 		justify-content: center;
 	}
 	.toc-title {
+		color: #000;
 		padding: 10px 50px 10px 10px;
 
 		span {
